# incf.countryutils

./: LICENSE.txt  PKG-INFO  README.md  bootstrap.py  buildout.cfg  pyproject.toml  setup.py
docs/: HISTORY.txt
incf/countryutils/: README.txt  __init__.py  data.py  prepare_data.py  raw_data.txt  tests.py  transformations.py
